test/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cctv.local.chriggle.com`)
      kind: Rule
      services:
        - name: frigate
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-chriggle-com-tls
