test/test.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: frigate  
spec:  
  ports:  
    - protocol: TCP  
      port: 80  
      targetPort: 5000  
---  
apiVersion: v1  
kind: Endpoints  
metadata:  
  name: frigate  
subsets:  
  - addresses:  
      - ip: 192.168.1.38
    ports:  
      - port: 5000  
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: frigate
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cctv.local.chriggle.com`)
      kind: Rule
      services:
        - name: frigate
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-chriggle-com-tls
